create the home page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,66 @@
     <title>Document</title>
   </head>
   <body>
-    <div>Hello</div>
+    <nav>
+      <div class="main">Long<span>fei.</span></div>
+      <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Works</a></li>
+      </ul>
+    </nav>
+    <div class="content">
+      <div class="aboutMe">
+        <img
+          width="400px"
+          height="400px"
+          class="self"
+          src="https://media-exp1.licdn.com/dms/image/C4D03AQEAjDiVvS8R9w/profile-displayphoto-shrink_800_800/0/1631312169929?e=1666224000&v=beta&t=jdgU15PyZLKTTeelvhpoBRJRgK0IJEQYu5Zv64oFhi0"
+          alt="image"
+        />
+        <div class="texts">
+          <div class="greeting">Hi There! I Am</div>
+          <div class="name">Longfei Shen</div>
+          <div class="introduction">A Software Engineer</div>
+        </div>
+      </div>
+      <div class="boxes">
+        <div class="box">
+          <div class="boxTitle">Education</div>
+          <div class="boxContent">
+            Columbia University <br />
+            M.S.
+          </div>
+        </div>
+        <div class="box">
+          <div class="boxTitle">Experience</div>
+          <div class="boxContent">Google SWE</div>
+        </div>
+        <div class="box">
+          <div class="boxTitle">Placeholder</div>
+          <div class="boxContent">placeholder</div>
+        </div>
+      </div>
+    </div>
+    <div class="social">
+      <a class="linkedin" href="#" alt="linkedin"
+        ><img
+          class="logo"
+          src="https://www.svgrepo.com/show/138936/linkedin.svg"
+          alt="Linkedin logo"
+        />Linkedin</a
+      >
+      <a class="facebook" href="#" alt="facebook">
+        <img class="logo" src=https://www.svgrepo.com/show/111202/facebook.svg ,
+        alt="Facebook logo" />Facebook</a
+      >
+      <a class="instagram" href="#" alt="instagram">
+        <img
+          class="logo"
+          src="https://www.svgrepo.com/show/111199/instagram.svg"
+          ,
+          alt="Facebook logo"
+        />Instagram</a
+      >
+    </div>
   </body>
 </html>
